untested refactor so everything returns cached type

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -77,14 +77,14 @@
     "system = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'system', 'content': 'Answer the user\\'s question please.'},\n",
-    "        'requirements': [],\n",
+    "        'parent_ids': [],\n",
     "    }\n",
     "])\n",
     "\n",
     "user_1 = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'user', 'content': 'What is the capital of France?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "\n",
     "])\n",
@@ -92,7 +92,7 @@
     "user_2 = workflow.insert([\n",
     "   {\n",
     "        'message': {'role': 'user', 'content': 'What is the capital of Germany?'},\n",
-    "        'requirements': [system, user_1],\n",
+    "        'parent_ids': [system, user_1],\n",
     "    }\n",
     "])\n",
     "\n",
@@ -191,24 +191,24 @@
     "[system] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'system', 'content': '''Answer all of the questions.'''},\n",
-    "        'requirements': [],\n",
+    "        'parent_ids': [],\n",
     "    }\n",
     "])\n",
     "\n",
     "q1, q2 = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the capital of Germany?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the smallest city in France?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "])\n",
     "\n",
     "tokens, ids, _ = workflow.step(\n",
     "    tasks=[\n",
-    "        {'requirements': [system, q1, q2], 'expects': ('assistant', None)}\n",
+    "        {'parent_ids': [system, q1, q2], 'expects': ('assistant', None)}\n",
     "        for _ in range(16)\n",
     "    ],\n",
     "    prefill=True,\n",
@@ -326,24 +326,24 @@
     "[system] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'system', 'content': '''Answer all of the questions.'''},\n",
-    "        'requirements': [],\n",
+    "        'parent_ids': [],\n",
     "    }\n",
     "])\n",
     "\n",
     "q1, q2 = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the capital of Germany?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the smallest city in France?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "])\n",
     "\n",
     "tokens, ids, _ = workflow.step(\n",
     "    tasks=[\n",
-    "        {'requirements': [system, q1, q2], 'expects': ('assistant', None)}\n",
+    "        {'parent_ids': [system, q1, q2], 'expects': ('assistant', None)}\n",
     "        for _ in range(16)\n",
     "    ],\n",
     "    prefill=True,\n",
@@ -438,24 +438,24 @@
     "[system] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'system', 'content': '''Answer all of the questions.'''},\n",
-    "        'requirements': [],\n",
+    "        'parent_ids': [],\n",
     "    }\n",
     "])\n",
     "\n",
     "q1, q2 = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the capital of Germany?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the smallest city in France?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "])\n",
     "\n",
     "tokens, ids, _ = workflow.step(\n",
     "    tasks=[\n",
-    "        {'requirements': [system, q2, q1], 'expects': ('assistant', None)}\n",
+    "        {'parent_ids': [system, q2, q1], 'expects': ('assistant', None)}\n",
     "        for _ in range(16)\n",
     "    ],\n",
     "    prefill=True,\n",
@@ -587,27 +587,27 @@
     "[system] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'system', 'content': '''Answer all of the questions.'''},\n",
-    "        'requirements': [],\n",
+    "        'parent_ids': [],\n",
     "    }\n",
     "])\n",
     "\n",
     "[q1] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the capital of Germany?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "])\n",
     "\n",
     "[q2] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the smallest city in France?'},\n",
-    "        'requirements': [system, q1],\n",
+    "        'parent_ids': [system, q1],\n",
     "    }\n",
     "])\n",
     "\n",
     "tokens, ids, _ = workflow.step(\n",
     "    tasks=[\n",
-    "        {'requirements': [system, q1, q2], 'expects': ('assistant', None)}\n",
+    "        {'parent_ids': [system, q1, q2], 'expects': ('assistant', None)}\n",
     "        for _ in range(16)\n",
     "    ],\n",
     "    prefill=True,\n",
@@ -713,27 +713,27 @@
     "[system] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'system', 'content': '''Answer all of the questions.'''},\n",
-    "        'requirements': [],\n",
+    "        'parent_ids': [],\n",
     "    }\n",
     "])\n",
     "\n",
     "[q1] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the capital of Germany?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "])\n",
     "\n",
     "[q2] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the smallest city in France?'},\n",
-    "        'requirements': [system, q1],\n",
+    "        'parent_ids': [system, q1],\n",
     "    }\n",
     "])\n",
     "\n",
     "tokens, ids, _ = workflow.step(\n",
     "    tasks=[\n",
-    "        {'requirements': [system, q2], 'expects': ('assistant', None)}\n",
+    "        {'parent_ids': [system, q2], 'expects': ('assistant', None)}\n",
     "        for _ in range(16)\n",
     "    ],\n",
     "    prefill=True,\n",
@@ -825,27 +825,27 @@
     "[system] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'system', 'content': '''Answer all of the questions.'''},\n",
-    "        'requirements': [],\n",
+    "        'parent_ids': [],\n",
     "    }\n",
     "])\n",
     "\n",
     "[q1] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the capital of Germany?'},\n",
-    "        'requirements': [system],\n",
+    "        'parent_ids': [system],\n",
     "    },\n",
     "])\n",
     "\n",
     "[q2] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'assistant', 'content': 'What is the smallest city in France?'},\n",
-    "        'requirements': [system, q1],\n",
+    "        'parent_ids': [system, q1],\n",
     "    }\n",
     "])\n",
     "\n",
     "tokens, ids, _ = workflow.step(\n",
     "    tasks=[\n",
-    "        {'requirements': [system, q1], 'expects': ('assistant', None)}\n",
+    "        {'parent_ids': [system, q1], 'expects': ('assistant', None)}\n",
     "        for _ in range(16)\n",
     "    ],\n",
     "    prefill=True,\n",
