--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -61,7 +61,10 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from generation import Llama\n",
+    "\n",
+    "# test in higher precision\n",
+    "workflow.model = workflow.model.float()\n",
+    "llama.model = llama.model.float()\n",
     "\n",
     "completion = llama.chat_completion([[\n",
     "    {'role': 'system', 'content': 'Answer the user\\'s question please.'},\n",
@@ -74,34 +77,39 @@
     "regular_cache_v = llama.model.layers[0].attention.cache_v[0].clone()\n",
     "regular_cache_k = llama.model.layers[0].attention.cache_k[0].clone()\n",
     "\n",
-    "system = workflow.insert([\n",
+    "workflow.reset()\n",
+    "\n",
+    "[system] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'system', 'content': 'Answer the user\\'s question please.'},\n",
     "        'parent_ids': [],\n",
-    "    }\n",
+    "    },\n",
     "])\n",
     "\n",
-    "user_1 = workflow.insert([\n",
+    "[user_1] = workflow.insert([\n",
     "    {\n",
     "        'message': {'role': 'user', 'content': 'What is the capital of France?'},\n",
-    "        'parent_ids': [system],\n",
+    "        'parent_ids': [system['id']],\n",
     "    },\n",
     "\n",
     "])\n",
     "\n",
-    "user_2 = workflow.insert([\n",
+    "[user_2] = workflow.insert([\n",
     "   {\n",
     "        'message': {'role': 'user', 'content': 'What is the capital of Germany?'},\n",
-    "        'parent_ids': [system, user_1],\n",
+    "        'parent_ids': [system['id'], user_1['id']],\n",
     "    }\n",
     "])\n",
     "\n",
     "workflow_cache_v = workflow.model.layers[0].attention.cache_v[0].clone()\n",
     "workflow_cache_k = workflow.model.layers[0].attention.cache_k[0].clone()\n",
     "\n",
-    "for n in range(len(workflow.context)):\n",
-    "    print((workflow_cache_v[n] - regular_cache_v[n]).max())\n",
-    "    print((workflow_cache_k[n] - regular_cache_k[n]).max())"
+    "for n in range(workflow.context_len):\n",
+    "    print(n, (workflow_cache_v[n] - regular_cache_v[n]).max())\n",
+    "    print(n, (workflow_cache_k[n] - regular_cache_k[n]).max())\n",
+    "    \n",
+    "workflow.model = workflow.model.bfloat16()\n",
+    "llama.model = llama.model.bfloat16()"
    ]
   },
   {
