add recent experiment to example notebook

--- a/examples/tot.ipynb
+++ b/examples/tot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f6ca7760-6bfc-438b-b65a-5fb4f4ba9383",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8dfb45fd",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
       "> initializing model parallel with size 1\n",
       "> initializing ddp with size 1\n",
       "> initializing pipeline with size 1\n",
-      "Loaded in 11.76 seconds\n"
+      "Loaded in 23.67 seconds\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "64b91268-7d35-4362-9ede-2048c44dd951",
    "metadata": {},
    "outputs": [
@@ -84,53 +84,91 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 5/100 [01:58<37:46, 23.86s/it]"
+      "100%|██████████| 100/100 [1:00:05<00:00, 36.06s/it]\n"
      ]
     }
    ],
    "source": [
+    "import json\n",
     "from tqdm import tqdm\n",
-    "from llama.benchmark.tot import tricky_tot_cached, tricky_tot_baseline, load_math_problems\n",
+    "from llama.benchmark.tot import tricky_tot_cached, tricky_tot_baseline, load_math_problems, benchmark_tricky_tot\n",
     "\n",
-    "problems = load_math_problems('../data/MATH', split='train', problem_types=['counting_and_probability'])[:100]\n",
+    "problems = load_math_problems(\n",
+    "    '../data/MATH',\n",
+    "    split='train',\n",
+    "    problem_types=['counting_and_probability']\n",
+    ")[:100]\n",
     "\n",
-    "votes_baseline = []\n",
-    "trick_indices_baseline = []\n",
-    "workflow.model.reshape_cache(8)\n",
-    "\n",
+    "comps = []\n",
     "for problem in tqdm(problems):\n",
-    "    outputs = tricky_tot_baseline(\n",
+    "    comps.append(benchmark_tricky_tot(\n",
     "        llama=llama,\n",
-    "        problem=problem['problem'],\n",
-    "        branching_factor=8,\n",
-    "        voters=4\n",
-    "    )\n",
-    "    votes_baseline.append(outputs['votes'])\n",
-    "    trick_indices_baseline.append(outputs['trick_indices'])\n",
-    "\n",
-    "votes_cached = []\n",
-    "trick_indices_cached = []\n",
-    "workflow.model.reshape_cache(1)\n",
-    "\n",
-    "for problem in tqdm(problems):\n",
-    "    workflow.reset()\n",
-    "    outputs = tricky_tot_cached(\n",
     "        workflow=workflow,\n",
     "        problem=problem['problem'],\n",
     "        branching_factor=8,\n",
-    "        voters=4,\n",
-    "    )\n",
-    "    votes_cached.append(outputs['votes'])\n",
-    "    trick_indices_cached.append(outputs['trick_indices'])\n",
-    "    \n",
+    "        voters=4\n",
+    "    ))\n",
+    "\n",
+    "comps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dce99a0f-1dd8-475d-9ef9-71c61dbafd7b",
+   "metadata": {},
+   "source": [
+    "## final solution quality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bb8b0b43-d351-4a0c-8525-305cefabb73a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/100 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Invalid shape",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m solutions \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m problem \u001b[38;5;129;01min\u001b[39;00m tqdm(problems):\n\u001b[0;32m---> 13\u001b[0m     solutions\u001b[38;5;241m.\u001b[39mappend(\u001b[43mbenchmark_solution_quality\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m        \u001b[49m\u001b[43mllama\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mllama\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m        \u001b[49m\u001b[43mworkflow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mworkflow\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[43m        \u001b[49m\u001b[43mproblem\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mproblem\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mproblem\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[43m        \u001b[49m\u001b[43mbranching_factor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[43m        \u001b[49m\u001b[43mvoters\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\n\u001b[1;32m     19\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     21\u001b[0m solutions\n",
+      "File \u001b[0;32m~/llama3/llama/benchmark/tot.py:508\u001b[0m, in \u001b[0;36mbenchmark_solution_quality\u001b[0;34m(llama, workflow, problem, branching_factor, voters)\u001b[0m\n\u001b[1;32m    501\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mbenchmark_solution_quality\u001b[39m(\n\u001b[1;32m    502\u001b[0m     llama: Llama,\n\u001b[1;32m    503\u001b[0m     workflow: Workflow,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    506\u001b[0m     voters: \u001b[38;5;28mint\u001b[39m,\n\u001b[1;32m    507\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Optional[Dict]:\n\u001b[0;32m--> 508\u001b[0m     \u001b[43mllama\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape_cache\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mbranching_factor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvoters\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    509\u001b[0m     baseline_proposals \u001b[38;5;241m=\u001b[39m llama\u001b[38;5;241m.\u001b[39mchat_completion(\n\u001b[1;32m    510\u001b[0m         [\n\u001b[1;32m    511\u001b[0m             [{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msystem\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: cot_prompt}, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: format_problem(problem)}]\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    517\u001b[0m         seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m,\n\u001b[1;32m    518\u001b[0m     )\n\u001b[1;32m    520\u001b[0m     proposal_force \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfull((branching_factor, \u001b[38;5;241m512\u001b[39m), workflow\u001b[38;5;241m.\u001b[39mtokenizer\u001b[38;5;241m.\u001b[39meot_id, device\u001b[38;5;241m=\u001b[39mworkflow\u001b[38;5;241m.\u001b[39mdevice)\n",
+      "File \u001b[0;32m~/llama3/llama/model.py:338\u001b[0m, in \u001b[0;36mTransformer.reshape_cache\u001b[0;34m(self, new_batch_size)\u001b[0m\n\u001b[1;32m    336\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m new_batch_size \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    337\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m tot \u001b[38;5;241m%\u001b[39m new_batch_size \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 338\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid shape\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    339\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39mmax_batch_size \u001b[38;5;241m=\u001b[39m new_batch_size\n\u001b[1;32m    340\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39mmax_seq_len \u001b[38;5;241m=\u001b[39m tot \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m new_batch_size\n",
+      "\u001b[0;31mException\u001b[0m: Invalid shape"
+     ]
+    }
+   ],
+   "source": [
     "import json\n",
-    "with open('trick_results.json', 'w') as f:\n",
-    "    json.dump({\n",
-    "        'votes_baseline': votes_baseline,\n",
-    "        'trick_indices_baseline': trick_indices_baseline,\n",
-    "        'votes_cached': votes_cached,\n",
-    "        'trick_indices_cached': trick_indices_cached\n",
-    "    }, f)"
+    "from tqdm import tqdm\n",
+    "from llama.benchmark.tot import load_math_problems, benchmark_solution_quality\n",
+    "\n",
+    "problems = load_math_problems(\n",
+    "    '../data/MATH',\n",
+    "    split='train',\n",
+    "    problem_types=['counting_and_probability']\n",
+    ")[:100]\n",
+    "\n",
+    "solutions = []\n",
+    "for problem in tqdm(problems):\n",
+    "    solutions.append(benchmark_solution_quality(\n",
+    "        llama=llama,\n",
+    "        workflow=workflow,\n",
+    "        problem=problem['problem'],\n",
+    "        branching_factor=4,\n",
+    "        voters=4\n",
+    "    ))\n",
+    "\n",
+    "solutions"
    ]
   },
   {
