update notebook with solution quality judge results

--- a/examples/tot.ipynb
+++ b/examples/tot.ipynb
@@ -41,7 +41,7 @@
       "> initializing model parallel with size 1\n",
       "> initializing ddp with size 1\n",
       "> initializing pipeline with size 1\n",
-      "Loaded in 23.67 seconds\n"
+      "Loaded in 14.69 seconds\n"
      ]
     }
    ],
@@ -122,31 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bb8b0b43-d351-4a0c-8525-305cefabb73a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "Invalid shape",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m solutions \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m problem \u001b[38;5;129;01min\u001b[39;00m tqdm(problems):\n\u001b[0;32m---> 13\u001b[0m     solutions\u001b[38;5;241m.\u001b[39mappend(\u001b[43mbenchmark_solution_quality\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m        \u001b[49m\u001b[43mllama\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mllama\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m        \u001b[49m\u001b[43mworkflow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mworkflow\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[43m        \u001b[49m\u001b[43mproblem\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mproblem\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mproblem\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[43m        \u001b[49m\u001b[43mbranching_factor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[43m        \u001b[49m\u001b[43mvoters\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\n\u001b[1;32m     19\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     21\u001b[0m solutions\n",
-      "File \u001b[0;32m~/llama3/llama/benchmark/tot.py:508\u001b[0m, in \u001b[0;36mbenchmark_solution_quality\u001b[0;34m(llama, workflow, problem, branching_factor, voters)\u001b[0m\n\u001b[1;32m    501\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mbenchmark_solution_quality\u001b[39m(\n\u001b[1;32m    502\u001b[0m     llama: Llama,\n\u001b[1;32m    503\u001b[0m     workflow: Workflow,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    506\u001b[0m     voters: \u001b[38;5;28mint\u001b[39m,\n\u001b[1;32m    507\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Optional[Dict]:\n\u001b[0;32m--> 508\u001b[0m     \u001b[43mllama\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape_cache\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mbranching_factor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvoters\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    509\u001b[0m     baseline_proposals \u001b[38;5;241m=\u001b[39m llama\u001b[38;5;241m.\u001b[39mchat_completion(\n\u001b[1;32m    510\u001b[0m         [\n\u001b[1;32m    511\u001b[0m             [{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msystem\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: cot_prompt}, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: format_problem(problem)}]\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    517\u001b[0m         seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m,\n\u001b[1;32m    518\u001b[0m     )\n\u001b[1;32m    520\u001b[0m     proposal_force \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfull((branching_factor, \u001b[38;5;241m512\u001b[39m), workflow\u001b[38;5;241m.\u001b[39mtokenizer\u001b[38;5;241m.\u001b[39meot_id, device\u001b[38;5;241m=\u001b[39mworkflow\u001b[38;5;241m.\u001b[39mdevice)\n",
-      "File \u001b[0;32m~/llama3/llama/model.py:338\u001b[0m, in \u001b[0;36mTransformer.reshape_cache\u001b[0;34m(self, new_batch_size)\u001b[0m\n\u001b[1;32m    336\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m new_batch_size \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    337\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m tot \u001b[38;5;241m%\u001b[39m new_batch_size \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 338\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid shape\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    339\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39mmax_batch_size \u001b[38;5;241m=\u001b[39m new_batch_size\n\u001b[1;32m    340\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39mmax_seq_len \u001b[38;5;241m=\u001b[39m tot \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m new_batch_size\n",
-      "\u001b[0;31mException\u001b[0m: Invalid shape"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "from tqdm import tqdm\n",
@@ -169,6 +148,147 @@
     "    ))\n",
     "\n",
     "solutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b204bff3-de57-4035-867f-19537d39effb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [04:41<00:00,  2.81s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import json\n",
+    "import random\n",
+    "from tqdm import tqdm\n",
+    "from collections import Counter\n",
+    "from llama.benchmark.tot import load_math_problems, benchmark_solution_quality, parse_choice\n",
+    "\n",
+    "problems = load_math_problems(\n",
+    "    '../data/MATH',\n",
+    "    split='train',\n",
+    "    problem_types=['counting_and_probability']\n",
+    ")[:100]\n",
+    "\n",
+    "with open('final_solutions.json', 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "    \n",
+    "evaluator_prompt = '''\n",
+    "You are evaluating final answers to AMC/AIME competition problems. You will receive:\n",
+    "\n",
+    "1. A problem statement\n",
+    "2. The ground truth solution \n",
+    "3. A shared solution proposal that both contestants used\n",
+    "4. Two final answers based on this proposal\n",
+    "\n",
+    "Your task is to evaluate how effectively each contestant converted the shared proposal into a valid solution.\n",
+    "Note that valid solutions may differ from the ground truth approach while remaining correct.\n",
+    "\n",
+    "Evaluate both answers focusing on:\n",
+    "1. Answer Format Quality\n",
+    "- Clarity and conciseness of final statement\n",
+    "- Proper mathematical notation\n",
+    "- Inclusion of key numerical result\n",
+    "\n",
+    "2. Mathematical Validity\n",
+    "- Correctness of final numerical answer\n",
+    "- Completeness (all parts answered)\n",
+    "- Any invalid mathematical claims\n",
+    "\n",
+    "3. Justification Level\n",
+    "- Appropriate amount of supporting context\n",
+    "- Balance between brevity and explanation\n",
+    "- Clear connection to previous reasoning\n",
+    "\n",
+    "Walk through each of these criterion and compare the 2 solutions. \n",
+    "\n",
+    "You must format your response as:\n",
+    "\n",
+    "VERDICT: [1 or 2]\n",
+    "VERDICT_NOTE: (one sentence explanation)\n",
+    "'''\n",
+    "\n",
+    "baseline_win = 0\n",
+    "cached_win = 0\n",
+    "\n",
+    "for d, problem_obj in tqdm(zip(data, problems), total=100):\n",
+    "    problem = d['problem']\n",
+    "    solution = problem_obj['solution']\n",
+    "    baseline_final = d['baseline_final']\n",
+    "    cached_final = d['cached_final']\n",
+    "    \n",
+    "    votes = [\n",
+    "        choice for resp in d['voters'] if\n",
+    "        (choice := parse_choice(resp)) is not None\n",
+    "    ]\n",
+    "    best = Counter(votes).most_common(1)[0][0] - 1\n",
+    "    \n",
+    "    baseline_first = random.choice([True, False])\n",
+    "    ans1 = baseline_final if baseline_first else cached_final \n",
+    "    ans2 = cached_final if baseline_first else baseline_final\n",
+    "    \n",
+    "    dialog = [\n",
+    "        {'role': 'system', 'content': evaluator_prompt},\n",
+    "        {'role': 'user', 'content': f'''\n",
+    "PROBLEM STATEMENT:\n",
+    "{problem}\n",
+    "\n",
+    "GROUND TRUTH SOLUTION:\n",
+    "{solution}\n",
+    "\n",
+    "SOLUTION PROPOSAL:\n",
+    "{d['proposals'][best]}\n",
+    "\n",
+    "FINAL ANSWER #1:\n",
+    "{ans1}\n",
+    "\n",
+    "FINAL ANSWER #2:\n",
+    "{ans2}\n",
+    "'''\n",
+    "        }\n",
+    "    ]\n",
+    "\n",
+    "    [evaluation] = llama.chat_completion(\n",
+    "        [dialog],\n",
+    "        max_gen_len=256,\n",
+    "        temperature=0.7,\n",
+    "        top_p=0.9,\n",
+    "        seed=42,\n",
+    "    )\n",
+    "    \n",
+    "    match = re.search(r'VERDICT:\\s*(\\d)', evaluation['generation']['content'])\n",
+    "    if match:\n",
+    "        num = int(match.group(1))\n",
+    "        if (num == 1 and baseline_first) or (num == 2 and not baseline_first):\n",
+    "            baseline_win += 1\n",
+    "        else:\n",
+    "            cached_win += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d0f179e3-0c80-4dbb-ac38-2c3fdbadb4a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(baseline_win, cached_win)"
    ]
   },
   {
